--- a/src/styles/dropdown.scss
+++ b/src/styles/dropdown.scss
@@ -39,6 +39,10 @@
   align-items: center;
   cursor: pointer;
   width: 100%;
+
+  .loading-spinner-dot {
+    background: $grey-darker;
+  }
 }
 
 .dropdown-tooltip {
