WIP entrance animation

--- a/src/styles/cadence.scss
+++ b/src/styles/cadence.scss
@@ -9,6 +9,10 @@
   min-height: 120px;
   margin: 4px;
 
+  &.entered {
+    bottom: 12px;
+  }
+
   &.highlight {
     background: $grey-lighter;
   }
