--- a/src/styles/ceremony.scss
+++ b/src/styles/ceremony.scss
@@ -6,7 +6,8 @@
   width: 100%;
   background-color: #f6f6f6;
   border-radius: 3px;
-  transition: 0.2s ease-in-out;
+  left: 8px;
+  bottom: 16px;
 
   &:hover {
     background-color: $grey-light;
