--- a/src/styles/board.scss
+++ b/src/styles/board.scss
@@ -11,6 +11,10 @@
   .undecided { margin-right: 20px; }
 }
 
+.board-confetti {
+  z-index: 100;
+}
+
 .board-content {
   padding: 16px;
   max-height: 100vh;
