--- a/src/styles/ceremony.scss
+++ b/src/styles/ceremony.scss
@@ -9,6 +9,20 @@
   left: 8px;
   bottom: 16px;
 
+  &.entering {
+    position: relative;
+    bottom: 8px;
+    left: 4px;
+    opacity: 0;
+  }
+
+  &.entered {
+    transition: all 0.4s ease-in-out;
+    opacity: 1;
+    bottom: 0;
+    left: 0;
+  }
+
   &:hover {
     background-color: $grey-light;
     cursor: pointer;
