--- a/src/styles/toast.scss
+++ b/src/styles/toast.scss
@@ -3,19 +3,19 @@
 .toast {
   position: fixed;
   bottom: 40px;
-  right: 20px;
-  background: $grey-darker;
+  right: 100px;
+  background: $grey-darkest;
   color: $grey-lighter;
   padding: 4px 12px;
   margin-right: -2px;
   border-radius: 4px;
   opacity: 0;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.25s ease-in-out;
 
   &.visible {
     padding: 8px;
     margin: 0;
-    bottom: 20px;
+    bottom: 30px;
     opacity: 1;
   }
 }
