--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -900,7 +900,7 @@ pre tt:after {
 
   &__Content {
     top: 8vh !important;
-    height: 80vh !important;
+    max-height: 80vh !important;
     transition: 0.2s ease-in-out;
     border-radius: 4px;
 
