--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -897,7 +897,8 @@ pre tt:after {
 
   &__Content {
     top: 8vh !important;
-    height: 80vh !important;
+    max-height: 80vh !important;
+    width: 90vw !important;
     transition: 0.2s ease-in-out;
     border-radius: 4px;
 
@@ -906,6 +907,11 @@ pre tt:after {
     }
     &--before-close {
       top: 8vh !important;
+    }
+
+    @media(max-width: 768px) {
+      top: 4vh !important;
+      max-height: 92vh !important;
     }
   }
 }
