--- a/src/styles/setup.scss
+++ b/src/styles/setup.scss
@@ -73,6 +73,23 @@
       flex-basis: 50%;
     }
 
+    @media(max-width: 768px) {
+      flex-direction: column;
+
+      & > div:first-child {
+        max-height: 150px;
+        overflow: hidden;
+        box-shadow: 0 0 4px $box-shadow;
+        margin-top: 12px;
+        overflow: auto;
+        border-radius: 4px;
+      }
+
+      & > div:last-child {
+        flex-grow: 1;
+      }
+    }
+
     .card {
       margin: 16px auto;
     }
